--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write src"
   },
   "dependencies": {
+    "@openapitools/openapi-generator-cli": "^2.16.3",
+    "axios": "^1.7.9",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -25,6 +27,7 @@
     "@vue/eslint-config-typescript": "^14.3.0",
     "eslint": "^9.18.0",
     "eslint-plugin-vue": "^9.32.0",
+    "openapi-typescript-codegen": "^0.29.0",
     "prettier": "^3.4.2",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.0"
